# QuickScrape

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  QuickScrape.md  README.md  progress_log.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  packaging.md
docs/api-reference/: index.md  job-management.md
docs/examples/: daily-scrapes.md  index.md
docs/troubleshooting/: index.md  scheduling-issues.md
docs/user-guide/: cli-usage.md  configuration.md  getting-started.md  index.md  installation.md  scheduling.md
src/quickscrape/: cli.py
src/quickscrape/api/: claude.py  selector_generator.py
src/quickscrape/cli/: __init__.py  wizard.py
src/quickscrape/config/: config_manager.py  init.py  list.py  models.py
src/quickscrape/core/: version.py
src/quickscrape/data/: __init__.py  extraction.py  processors.py
src/quickscrape/export/: __init__.py  base.py  config.py  exporters.py  utils.py
src/quickscrape/scheduling/: __init__.py  job_manager.py  models.py  scheduler.py
src/quickscrape/scraper/: __init__.py  base.py  factory.py  playwright_scraper.py  requests_scraper.py
src/quickscrape/utils/: logger.py  yaml_utils.py
tests/: conftest.py
tests/api/: __init__.py  test_claude.py  test_selector_generator.py
tests/quickscrape/cli/: __init__.py  test_wizard.py
tests/quickscrape/config/: test_config_manager.py  test_init.py
tests/quickscrape/data/: test_extraction.py  test_processors.py
tests/quickscrape/export/: test_base.py  test_config.py  test_exporters.py  test_utils.py
tests/quickscrape/scraper/: __init__.py  test_factory.py  test_playwright_scraper.py  test_requests_scraper.py
tests/quickscrape/utils/: test_yaml_utils.py
tests/scheduling/: __init__.py  test_job_manager.py  test_scheduler.py
